stablished fixed size for subchannel carrousel view and other channels show only visible

--- a/app/assets/stylesheets/resources/channels/_profile.sass
+++ b/app/assets/stylesheets/resources/channels/_profile.sass
@@ -87,6 +87,9 @@ body[data-namespace="channels"][data-controller="profiles"]
             width: 227px
             .sub-channel
               width: 227px
+              height: 179px
+              img
+                width: 100%
           .swiper-button-prev
             margin-left: -45px
             left: auto
